overflow issue solved

--- a/src/components/Chatbox/Chatbox.style.scss
+++ b/src/components/Chatbox/Chatbox.style.scss
@@ -8,6 +8,10 @@
     flex: 1;
     display: flex;
     flex-direction: column-reverse;
+    overflow: scroll;
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__bottom {
