--- a/src/components/Sidebar/Sidebar.style.scss
+++ b/src/components/Sidebar/Sidebar.style.scss
@@ -14,6 +14,12 @@
   }
 
   &__channels {
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    &::-webkit-scrollbar {
+      display: none;
+    }
     &-Header {
       display: flex;
       justify-content: space-between;
